[gd_scene load_steps=9 format=3 uid="uid://dj8mkg7m26h8k"]

[ext_resource type="Script" path="res://Scripts/menu/death_menu.gd" id="1_31lcc"]
[ext_resource type="Texture2D" uid="uid://cbwysr46msphu" path="res://Sprites/gui/GUI.png" id="2_hob5x"]
[ext_resource type="FontFile" uid="uid://cxt6sqemyvl3v" path="res://Fonts/monogram-extended.ttf" id="3_nt2tn"]
[ext_resource type="Texture2D" uid="uid://dedwku2cslrwa" path="res://Sprites/coin.png" id="4_35w8o"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q8yyw"]
atlas = ExtResource("2_hob5x")
region = Rect2(1.71534, 33.689, 45.4849, 43.8499)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuf2m"]
atlas = ExtResource("2_hob5x")
region = Rect2(112, 80, 32, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3lw8"]
atlas = ExtResource("2_hob5x")
region = Rect2(112, 96, 32, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_yb6cq"]
atlas = ExtResource("4_35w8o")
region = Rect2(0, 0, 15.7013, 15.9178)

[node name="DeathMenu" type="CanvasLayer"]
script = ExtResource("1_31lcc")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = -145.0
offset_right = 204.0
offset_bottom = 290.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_q8yyw")

[node name="Respawn" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -156.5
offset_right = 118.0
offset_bottom = -57.5
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Exchange your life for 50% of gold"
texture_normal = SubResource("AtlasTexture_vuf2m")
texture_pressed = SubResource("AtlasTexture_x3lw8")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/Respawn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = -2.0
offset_right = -25.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_nt2tn")
theme_override_font_sizes/font_size = 37
text = "MODIFY DEATH 
CONTRACT"
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="TextureRect/Respawn"]
layout_mode = 0
offset_left = 145.5
offset_top = 44.0
offset_right = 178.5
offset_bottom = 81.0
texture = SubResource("AtlasTexture_yb6cq")

[node name="Menu" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -44.5
offset_right = 118.0
offset_bottom = 54.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_vuf2m")
texture_pressed = SubResource("AtlasTexture_x3lw8")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_nt2tn")
theme_override_font_sizes/font_size = 72
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = 64.5
offset_right = 118.0
offset_bottom = 163.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_vuf2m")
texture_pressed = SubResource("AtlasTexture_x3lw8")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/Quit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_nt2tn")
theme_override_font_sizes/font_size = 72
text = "QUIT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DiedLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -237.0
offset_right = 20.0
offset_bottom = -197.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0.607843, 0.733333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_nt2tn")
theme_override_font_sizes/font_size = 150
text = "YOU DIED"

[node name="DeathScreenShowTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[connection signal="pressed" from="TextureRect/Respawn" to="." method="_on_respawn_pressed"]
[connection signal="pressed" from="TextureRect/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="TextureRect/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="DeathScreenShowTimer" to="." method="_on_death_screen_show_timer_timeout"]
